--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,23 +4,23 @@
 <title>Database meta inspector</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel='stylesheet'href='webjars/bootstrap/3.2.0/css/bootstrap.min.css'>
-<script type="text/javascript" src="webjars/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript"src="webjars/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/webjars/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript"src="/webjars/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<img style="width: 40px; height: 47px;"
-					src="http://megaicons.net/static/img/icons_sizes/8/178/512/data-add-database-icon.png">
-				<a href="#" class="navbar-brand">Database explorer application</a>
+					src="/resources/images/icon.png">
+				<a href="/" class="navbar-brand">Database explorer application</a>
 			</div>
 		</div>
 	</nav>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h1>Available database servers for inspection:</h1>
+				<h1 style="margin-bottom: 100px;">Available database servers for inspection:</h1>
 				<p class="lead">
 					<a class="btn btn-primary" style="width: 500px;"
 					href="mysql/schemas">MySQL</a>
