--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,17 +7,16 @@
 <script type="text/javascript" src="/webjars/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript"src="/webjars/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color: #ddd">
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
-			<div class="navbar-header">
-				<img style="width: 40px; height: 47px;"
-					src="/resources/images/icon.png">
-				<a href="/" class="navbar-brand">Database explorer application</a>
+			<div class="col-xs-offset-5">
+				<img style="width: 40px; height: 47px;" src="/resources/images/icon.png">
+				<a href="/" class="navbar-brand">Database explorer</a>
 			</div>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container" style="margin-bottom: 330px">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h1 style="margin-bottom: 100px;">Available database servers for inspection:</h1>
@@ -25,12 +24,21 @@
 					<a class="btn btn-primary" style="width: 500px;"
 					href="mysql/schemas">MySQL</a>
 				</p>
-				<ul class="list-unstyled">
-					<li>Application version: 0.0.1-SNAPSHOT</li>
-				</ul>
 			</div>
 		</div>
 	</div>
+	<footer class="footer" style="background-color: #222222">
+      <div class="container">
+      <div class="row">
+      	<div class="col-md-10">
+      		<p class="text-muted">Application version: 0.0.1-SNAPSHOT</p>
+      	</div>
+      	<div class="col-md-2">
+      		<p class="text-muted">2016</p>
+      	</div>
+      </div>
+      </div>
+    </footer>
 </body>
 </html>
 
