factory and proxy impl

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,11 @@
 				<h1 style="margin-bottom: 100px;">Available database servers for inspection:</h1>
 				<p class="lead">
 					<a class="btn btn-primary" style="width: 500px;"
-					href="mysql/schemas">MySQL</a>
+					href="sql/schemas/mysql">MySQL</a>
+				</p>
+				<p class="lead">
+					<a class="btn btn-primary" style="width: 500px;"
+					href="sql/schemas/postgresql">PostgreSQL</a>
 				</p>
 			</div>
 		</div>
