--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,10 +35,10 @@
       <div class="container">
       <div class="row">
       	<div class="col-md-10">
-      		<p class="text-muted">Application version: 0.0.1-SNAPSHOT</p>
+      		<p class="text-muted">Application version: 2.0.0</p>
       	</div>
       	<div class="col-md-2">
-      		<p class="text-muted">2016</p>
+      		<p class="text-muted">2019</p>
       	</div>
       </div>
       </div>
